Add search relevance data for 3.x versions only (#261)

--- a/.github/workflows/nightly-playground-deploy.yml
+++ b/.github/workflows/nightly-playground-deploy.yml
@@ -150,8 +150,11 @@ jobs:
                 --insecure
             done
           done
+
+      - uses: actions/checkout@v3
           
       - name: Add Search Relevance Workbench data
+        if: startsWith(inputs.dist_version, '3.')
         working-directory: nightly-playground
         run : |
           export OPENSEARCH_USER=${{ secrets.OPENSEARCH_USER }}
